<resources>
    <string name="app_name">Midiendo Distancias</string>
    <string name="title_home">Home</string>
    <string name="title_salidas">Salidas</string>
    <string name="title_actividades">Actividades</string>
    <string name="title_login">Ingresa!</string>
    <string name="title_register">Registrate!</string>
    <string name="button_register">Registrarme</string>
    <string name="button_login">Ingresar</string>


    <string name="input_name">Nombre</string>
    <string name="input_lastName">Apellido</string>
    <string name="input_dni">DNI</string>
    <string name="input_email">Email</string>
    <string name="input_password">Contraseña</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="create_account">Crear cuenta</string>
    <string name="card_description">Revisa tu registro de actividad.</string>
    <string name="card_title">Mi actividad!</string>
    <string name="card_label_button">Botón</string>
    <string name="title_entretenimiento">Entretenimiento</string>
    <string name="button_game">Comenzar juego</string>
    <string name="description_salidas">Oprima \'Comenzar\' para iniciar la salida segura.</string>
    <string name="button_salida">Comenzar</string>
    <string name="title_registros">Registros</string>
    <string name="description_entr">Ayuda a Donky a morfar antes de que termine el tiempo. Desplaza a Donky moviendo el celular en todos los sentidos y aumenta su tamaño comiendo los puntos.</string>
    <string name="description_ranking">Mejor Puntaje:</string>
</resources>
