<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.midiendodistanciasmobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_salidas"
        android:name="com.example.midiendodistanciasmobile.ui.salidas.SalidasFragment"
        android:label="@string/title_salidas"
        tools:layout="@layout/fragment_salidas" />

    <fragment
        android:id="@+id/navigation_actividades"
        android:name="com.example.midiendodistanciasmobile.ui.actividades.ActividadesFragment"
        android:label="@string/title_actividades"
        tools:layout="@layout/fragment_actividades" />
</navigation>